# gargle

./: .gitignore  README.md  blop.py  pyproject.toml
gargle/: maybe.py  result.py  typeclasses.py
scripts/: uniform_docstrings.py
tests/: test_integrity.py  test_pydantic_support.py
