[tool.poetry]
name = "gargle"
version = "0.1.0"
description = ""
authors = ["DeviousStoat <devious@stoat.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
poethepoet = "*"
pytest = "*"
pydantic = "*"
pydantic_core = "*"
ruff = "*"

[tool.pyright]
strict = ["**/*"]

[tool.ruff]
extend-select = ["Q", "RUF", "C90", "UP", "I"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.poe.tasks]
fmt = [
    { cmd = "ruff format ." },
    { cmd = "ruff check . --fix" }
]
uniform_docstrings = [
    { script = "scripts.uniform_docstrings:main" },
    { ref = "fmt" }
]
lint = "ruff check ."
check_type = "pyright"
check_fmt = "ruff format --check ."
test = "pytest -vv"
check = ["lint", "check_fmt", "check_type", "test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
